# rpi-sound-effector

./: README.md  install.sh  main.kv  main.py  referrence.txt  test.py
audio_process/: CMakeLists.txt
audio_process/include/: _dsp.hh  basic.hh  config.hh  fft_filter.hh  fir_filter.hh  instrument_effect.hh  voice_effect.hh
audio_process/src/: CMakeLists.txt  _dsp.cc  basic.cc  config.cc
audio_process/test/: CMakeLists.txt  main.cc  main.hh
